tests/parser/errors/invalid_array_type.ray
var invalid: [
var invalid: []
var invalid: [int
var invalid: [](int|float
